2005-01-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_filter.c: (ip_as_path,no_ip_as_path) Use argv_concat instead
	  of buffer_getstr.
	* bgp_route.c: (bgp_show_regexp) Fix memory leak: need to free string
	  returned by buffer_getstr.
	  (bgp_show_community) Must use XFREE instead of free on string
	  returned by buffer_getstr.
	* bgp_routemap.c: (set_community) Must use XFREE instead of free
	  on string returned by buffer_getstr.
	* bgp_vty.c: (neighbor_description) Use argv_concat instead of
	  buffer_getstr.

2005-01-24 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Fix showstopper bug. New route must be selected also
	  if old one is flaged as BGP_INFO_ATTR_CHANGED.

2005-01-17 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Clear peer's routing table regardless whether it's
	  configured or not. Being not configured is even better reason to
	  do it.

2005-01-05 Paul Jakma <paul@dishone.st>

	* bgp_packet.c: (bgp_write) set socket to nonblock while writing
          this should be generalised. See bugzilla #102. Fix supplied by
	  wawa@yandex-team.ru (Vladimir Ivanov).

2004-12-08 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* *.c: Change level of debug messages to LOG_DEBUG.

2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_main.c: (main) The 2nd argument to openzlog has been removed.

2004-12-03 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_main.c: (sigint) Use zlog_notice for termination message.
	  (main) Use zlog_notice for startup announcement.

2004-11-25 Hasso Tepper <hasso at quagga.net>

	* bgp_main.c: Make group to run as configurable.

2004-11-09 Paul Jakma <paul@dishone.st>

	* bgp_nexthop.c: collapse bgp_connected_ipvX, bgp_nexthop_cache_ipvX
	  and cache{1,2}.. into arrays of tables and hence collapse
          bgp_scan_ipv{4,6} into a single bgp_scan function. Tested, though
          a long time ago (and this change was hand-merged).
